--- a/cc.arduino.IDE2.desktop
+++ b/cc.arduino.IDE2.desktop
@@ -2,7 +2,7 @@
 Type=Application
 Name=Arduino IDE v2
 GenericName=Arduino IDE v2
-Comment=Open-source electronics prototyping platform v2
+Comment=Open-source electronics prototyping platform
 Exec=arduino-ide
 Icon=cc.arduino.IDE2
 Terminal=false
