--- a/cc.arduino.IDE2.desktop
+++ b/cc.arduino.IDE2.desktop
@@ -3,7 +3,7 @@ Type=Application
 Name=Arduino IDE v2
 GenericName=Arduino IDE v2
 Comment=Open-source electronics prototyping platform
-Exec=arduino-ide
+Exec=arduino-ide %U
 Icon=cc.arduino.IDE2
 Terminal=false
 MimeType=text/x-arduino;
